# eeg-rag

./: .editorconfig  .env.example  .gitignore  .pylintrc  CHANGELOG.md  INSTALL.md  LICENSE  MVP_COMPLETE.md  Makefile  PHASE1_TODO.md  PRODUCTION_READINESS_COMPLETE.md  QUICKSTART.md  QUICK_WINS_TODO.md  README.md  SESSION_SUMMARY_NOV24.md  TASK_COMPLETION_SUMMARY.md  TODO_COMPLETION_SUMMARY.md  WEB_INTEGRATION_COMPLETE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  undefined_behavior_report_20260119_120832.html  undefined_behavior_report_20260119_120832.json
.copilot/: code-standards.md  documentation-standards.md  domain-knowledge.md  git-workflow.md  instructions.md  performance-optimization.md  rag-implementation.md  security-validation.md  testing-standards.md
.github/: CONTRIBUTING.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
data/: ner_results_demo.json
data/corpus_test/: corpus_metadata.json  eeg_corpus_20251122.jsonl
data/demo_corpus/: corpus_metadata.json  eeg_corpus_20251122.jsonl  eeg_corpus_20260217.jsonl  embeddings.json  (+1 more)
docker/: Dockerfile  Dockerfile.prod  docker-compose.lite.yml  docker-compose.yml
docs/: AGENT2_COMPLETION.md  AGENT_ENHANCEMENTS_COMPLETE.md  BIBLIOMETRICS_INTEGRATION.md  COMPLETION_REPORT_NOV22.md  COMPONENT_VERIFICATION_REPORT.md  ENTERPRISE_FEATURES.md  FASTAPI_IMPLEMENTATION_COMPLETE.md  HISTORY_IMPLEMENTATION_COMPLETE.md  HISTORY_SYSTEM.md  NER_COMPLETION_SUMMARY.md  NEXT_STEPS_ROADMAP.md  ORCHESTRATOR_IMPLEMENTATION.md  PHASE1_INTEGRATION_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  PROJECT_STATUS.md  QUICK_WINS_IMPLEMENTATION.md  README.md  SEARCH_ARCHITECTURE.md  SYSTEMATIC_REVIEW_FEATURE.md  TECHNICAL_REFERENCE.md  TROUBLESHOOTING_GUIDE.md  UNDEFINED_BEHAVIOR_TESTING.md  VERIFICATION_COMPLETE.md  copilot-examples.md  copilot-prompt-reference.md
examples/: complete_pipeline_demo.py  demo_adaptive_reranking.py  demo_agent_hybrid_integration.py  demo_all_components.py  demo_all_improvements.py  demo_bibliometrics.py  demo_bibliometrics_advanced.py  demo_end_to_end_rag_hybrid.py  demo_hybrid_retrieval.py  demo_ner_eeg.py  demo_orchestrator.py  demo_production_features.py  demo_query_expansion.py  demo_reranking.py  evaluate_reranking_improvements.py  systematic_review_demo.py
k8s/: deployment.yaml  hpa.yaml  ingress.yaml
memory-bank/: app-description.md  change-log.md
schemas/: dl_eeg_review_2019_schema.yaml
scripts/: add_structured_comments.py  build_bm25_index.py  build_metadata_index.py  build_splade_index.py  index_papers_to_qdrant.py  ingest_papers.py  run_bulk_ingestion.py  run_ingestion.py  run_massive_ingestion.py  schedule_updates.sh  setup.sh  setup_production.py  setup_user.py
tests/: test_agentic_rag.py  test_base_agent_boundary_conditions.py  test_benchmarking_ranking_quality.py  test_bibliometrics.py  test_bibliometrics_advanced.py  test_citation_verifier.py  test_common_utils.py  test_context_aggregator.py  test_enhanced_agents.py  test_enhanced_agents_v2.py  test_error_handling.py  test_evaluation_comprehensive.py  test_final_aggregator.py  test_generation_ensemble.py  test_graph_agent.py  test_hybrid_retriever.py  test_ingestion.py  test_integration_new_components.py  test_integration_simple.py  test_local_agent.py  test_mcp_agent.py  test_memory_manager.py  test_memory_utils.py  test_ner_eeg.py  test_orchestrator.py  test_paper_authenticity.py  test_paper_store.py  test_performance_monitoring.py  test_persistence_utils.py  test_project_claims.py  test_query_router.py  test_rag_improvements.py  test_ragas_metrics.py  test_reranker.py  test_resilience_utils.py  test_response_generator_readiness.py  test_retrieval_hybrid.py  test_search_history.py  test_search_validation.py  test_semantic_chunker.py  (+12 more)
(+225 files in other folders)
