[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation system for EEG research literature"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EEG-RAG Contributors"}
]
keywords = [
    "EEG",
    "electroencephalography",
    "RAG",
    "retrieval-augmented-generation",
    "scientific-literature",
    "neuroscience",
    "PubMed",
    "FAISS",
    "NLP"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "faiss-cpu>=1.7.0",
    "transformers>=4.20.0",
    "sentence-transformers>=2.2.0",
    "torch>=1.10.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.6.0",
    "tqdm>=4.62.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
    "black>=22.0.0",
    "pylint>=2.12.0",
    "mypy>=0.950",
    "isort>=5.10.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

knowledge-graph = [
    "neo4j>=5.0.0",
    "redis>=4.0.0",
]

full = [
    "eeg-rag[dev,knowledge-graph]",
]

[project.urls]
Homepage = "https://github.com/hkevin01/eeg-rag"
Documentation = "https://github.com/hkevin01/eeg-rag/tree/main/docs"
Repository = "https://github.com/hkevin01/eeg-rag"
Issues = "https://github.com/hkevin01/eeg-rag/issues"

[project.scripts]
eeg-rag = "eeg_rag.cli.query:main"

[tool.setuptools]
packages = ["eeg_rag"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
eeg_rag = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/data/*", "**/dist/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
]

[tool.coverage.run]
source = ["src/eeg_rag"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
